changed java7 DatatypeConverter to Java8 Base64